[package]
name = "faster-hex"
version = "0.7.1"
authors = ["zhangsoledad <787953403@qq.com>"]
edition = "2018"
keywords = ["simd", "hex", "no-std"]
license = "MIT"
description = "Fast hex encoding."
repository = "https://github.com/NervosFoundation/faster-hex"
homepage = "https://github.com/NervosFoundation/faster-hex"
readme = "README.md"
exclude = [
    "afl/*",
    "benches/*",
    "fuzz/*",
    "CHANGELOG.md"
]

[features]
default = ["std"]
std = ["alloc"]
alloc = []



[dev-dependencies]
criterion = "0.3"
rustc-hex = "1.0"
hex = "0.3.2"
proptest = "1.0"

[[bench]]
name = "hex"
harness = false


[[bench]]
name = "check"
harness = false
