[package]
name = "faster-hex"
version = "0.8.0"
authors = ["zhangsoledad <787953403@qq.com>"]
edition = "2018"
keywords = ["simd", "hex", "no-std"]
license = "MIT"
description = "Fast hex encoding."
repository = "https://github.com/NervosFoundation/faster-hex"
homepage = "https://github.com/NervosFoundation/faster-hex"
readme = "README.md"
exclude = [
    "afl/*",
    "benches/*",
    "fuzz/*",
    "CHANGELOG.md"
]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"]}

[features]
default = ["std", "serde"]
std = ["alloc"]
alloc = []
serde = ["dep:serde"]



[dev-dependencies]
criterion = "0.3"
rustc-hex = "1.0"
hex = "0.3.2"
proptest = "1.0"
serde = { version = "1.0", features = ["derive"]}
bytes = {version = "1.4.0"}
serde_json ={ version = "*"}

[[bench]]
name = "hex"
harness = false


[[bench]]
name = "check"
harness = false
